# latexdl

./: AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
notebooks/: bib.ipynb  texsoup.ipynb
src/latexdl/: __init__.py  __main__.py  _assets.py  _bibtex.py  _commands.py  _fix_urls.py  _latex.py  _metadata.py  _pandoc.py  _source.py  _texsoup_wrapper.py  _types.py  cli.py  converter.py  expand.py  main.py  mcp.py  models.py  strip.py
tests/: conftest.py  test_assets.py  test_converter.py  test_metadata.py  test_pandoc.py  test_source.py  test_strip.py
tests/bibtext/: test_bibtex.py  test_bibtex_data.py  test_integration.py
tests/test_files/: with_comments.tex  with_environments.tex
