[tool.poetry]
name = "latexdl"
version = "0.6.5"
description = ""
authors = ["Nima Shoghi <nimashoghi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.66.4"
requests = "*"
typing-extensions = "*"
pylatexenc = "^2"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
rich = "*"
ruff = "*"
pyright = "*"
pytest = "*"
hypothesis = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
latexdl = "latexdl.main:main"
