[project]
name = "latexdl"
version = "0.8.0"
description = ""
authors = [{ name = "Nima Shoghi", email = "nimashoghi@gmail.com" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "tqdm",
    "requests",
    "typing-extensions",
    "pylatexenc>=2",
    "bibtexparser>=2.0.0b8",
    "pyahocorasick>=2.1.0",
]

[project.urls]
homepage = "https://github.com/nimashoghi/latexdl"

[project.scripts]
latexdl = "latexdl.main:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
rich = "*"
ruff = "*"
basedpyright = "*"
pytest = "*"
hypothesis = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.basedpyright]
typeCheckingMode = "standard"
deprecateTypingAliases = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportPrivateImportUsage = "none"
reportMatchNotExhaustive = "warning"
reportOverlappingOverload = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportImplicitOverride = "warning"
reportIncompatibleMethodOverride = "information"
